{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 312,
  "lineage": "957fc916-9c24-d1f1-1dd6-76718cf490fd",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pubsub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:174558992457:internet-gateway/igw-0c3776dd2b1c0d458",
            "id": "igw-0c3776dd2b1c0d458",
            "owner_id": "174558992457",
            "tags": {
              "Name": "Terratest"
            },
            "tags_all": {
              "Name": "Terratest"
            },
            "vpc_id": "vpc-0b1d98c8838e24150"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "terratest_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:174558992457:loadbalancer/app/example-Z06862732SOYI2NOBN440/21497b62bf2f861b",
            "arn_suffix": "app/example-Z06862732SOYI2NOBN440/21497b62bf2f861b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-Z06862732SOYI2NOBN440-32639651.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:174558992457:loadbalancer/app/example-Z06862732SOYI2NOBN440/21497b62bf2f861b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-Z06862732SOYI2NOBN440",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cdc6461ce4d7f9fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-063490b168f8ce8aa"
              },
              {
                "subnet_id": "subnet-0d8978eedc7460506"
              }
            ],
            "subnets": [
              "subnet-063490b168f8ce8aa",
              "subnet-0d8978eedc7460506"
            ],
            "tags": {
              "Name": "example-lb-Z06862732SOYI2NOBN440"
            },
            "tags_all": {
              "Name": "example-lb-Z06862732SOYI2NOBN440"
            },
            "vpc_id": "vpc-0b1d98c8838e24150",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.dns.data.aws_route53_zone.terratest_domain",
            "module.load_balancer.aws_subnet.terratest_subnet",
            "module.load_balancer.aws_subnet.terratest_subnet_2",
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_terratest_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:174558992457:listener/app/example-Z06862732SOYI2NOBN440/21497b62bf2f861b/1decd0e869df6805",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Hello, world",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:174558992457:listener/app/example-Z06862732SOYI2NOBN440/21497b62bf2f861b/1decd0e869df6805",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:174558992457:loadbalancer/app/example-Z06862732SOYI2NOBN440/21497b62bf2f861b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dns.data.aws_route53_zone.terratest_domain",
            "module.load_balancer.aws_lb.terratest_lb",
            "module.load_balancer.aws_subnet.terratest_subnet",
            "module.load_balancer.aws_subnet.terratest_subnet_2",
            "module.load_balancer.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:174558992457:route-table/rtb-00c041cdd02873c92",
            "id": "rtb-00c041cdd02873c92",
            "owner_id": "174558992457",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3776dd2b1c0d458",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d98c8838e24150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_internet_gateway.pubsub_igw",
            "module.load_balancer.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079f29032a617ce3b",
            "route_table_id": "rtb-00c041cdd02873c92",
            "subnet_id": "subnet-063490b168f8ce8aa"
          },
          "dependencies": [
            "module.load_balancer.aws_internet_gateway.pubsub_igw",
            "module.load_balancer.aws_route_table.public_table",
            "module.load_balancer.aws_subnet.terratest_subnet",
            "module.load_balancer.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc13c3ac9826bad3",
            "route_table_id": "rtb-00c041cdd02873c92",
            "subnet_id": "subnet-0d8978eedc7460506"
          },
          "dependencies": [
            "module.load_balancer.aws_internet_gateway.pubsub_igw",
            "module.load_balancer.aws_route_table.public_table",
            "module.load_balancer.aws_subnet.terratest_subnet_2",
            "module.load_balancer.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terratest_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:174558992457:subnet/subnet-063490b168f8ce8aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063490b168f8ce8aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174558992457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terratest"
            },
            "tags_all": {
              "Name": "Terratest"
            },
            "vpc_id": "vpc-0b1d98c8838e24150"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terratest_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:174558992457:subnet/subnet-0d8978eedc7460506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8978eedc7460506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174558992457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b1d98c8838e24150"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:174558992457:vpc/vpc-0b1d98c8838e24150",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066f03b1f550ac323",
            "default_route_table_id": "rtb-017c6d97ada02d071",
            "default_security_group_id": "sg-0cdc6461ce4d7f9fd",
            "dhcp_options_id": "dopt-0552231227c9fbdac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1d98c8838e24150",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017c6d97ada02d071",
            "owner_id": "174558992457",
            "tags": {
              "Name": "Terratest"
            },
            "tags_all": {
              "Name": "Terratest"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}